# MIRA

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  NOTICE  README.md  build.rs  docker-compose.yml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: codeql.yml
bundled-skills/com.mira.calculator/: skill.toml
bundled-skills/com.mira.calendar/: skill.toml
bundled-skills/com.mira.charts/: skill.toml
bundled-skills/com.mira.claudecode/: skill.toml
bundled-skills/com.mira.companion/: skill.toml
bundled-skills/com.mira.memory/: skill.toml
bundled-skills/com.mira.opencode/: skill.toml
bundled-skills/com.mira.pdf/: skill.toml
bundled-skills/com.mira.research/: skill.toml
bundled-skills/com.mira.summarise/: skill.toml
bundled-skills/com.mira.wiki/: skill.toml
config/: mira_config.example.json  mira_config.schema.json
docs/: CONTRIBUTING.md  README.md
docs/concepts/: agents-and-orchestration.md  channels.md  memory-and-wiki.md  overview.md  security-and-multi-user.md  tools-and-mcp.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: add-tools-with-mcp.md  backup-and-restore.md  calendar.md  connect-a-channel.md  generate-images-and-video.md  keep-conversations-local.md  manage-users.md  named-agents-and-workflows.md  open-built-web-apps.md  pair-mobile-app.md  personality-and-easter-eggs.md  proactive-checkins-and-briefing.md  remote-access.md  run-on-wsl.md  schedule-automations.md  single-sign-on.md  updating-and-rolling-back.md  voice-replies.md
docs/reference/: cli.md  settings.md
mira-docs/: features.md  how-to.md  limitations.md  overview.md  settings-reference.md  settings.md
prompts/: onboarding.yaml
scripts/: docker-entrypoint.sh  guardian_eval.py  install.ps1  install.sh
src/: banner.rs  db.rs  error.rs  guardian_sentinel.rs  hardware.rs  lib.rs  log_filter.rs  main.rs  system_prompt.rs  wsl_net.rs
src/agent/: adapter.rs  audit.rs  claude_code.rs  context_budget.rs  core.rs  definitions.rs  guardian.rs  guardian_actions.rs  hermes.rs  instance.rs  memory_hook.rs  mod.rs  named_agent.rs  opencode.rs  orchestrator.rs  process_tree.rs  protocol.rs  research.rs  resolver.rs  routing.rs  run_logs.rs  stream.rs  supervisor.rs  tokens.rs  tool_loop.rs  tool_select.rs  transport.rs  verify.rs  wiki_hook.rs  workflow.rs
src/artifacts/: mod.rs
src/auth/: capabilities.rs  groups.rs  identities.rs  invites.rs  ldap.rs  local.rs  middleware.rs  mod.rs  models.rs  oidc.rs  tokens.rs
src/automations/: agent_gate.rs  dispatch.rs  mod.rs  next_run_at.rs  predicate.rs  quiet_hours.rs  rate_limit.rs  store.rs  template.rs  types.rs  worker.rs
src/bench/: context.rs  judge.rs  longmemeval.rs  mod.rs  run.rs
src/calendar/: caldav.rs  google.rs  ical.rs  mod.rs  models.rs  outlook.rs  store.rs  sync.rs
src/channel/: cli_channel.rs  mod.rs  signal_channel.rs  telegram_channel.rs
src/channel_accounts/: legacy_migrate.rs  mod.rs  models.rs  store.rs
src/channel_identity/: link_codes.rs  mod.rs  store.rs
src/companion/: briefing.rs  chitchat.rs  dispatcher.rs  easter_eggs.rs  engagement.rs  engagement_log.rs  groups.rs  mod.rs  persona.rs  policy.rs  routing.rs  safety.rs  safety_log.rs  scheduler.rs  settings.rs
src/config/: migrate.rs  mod.rs  schema.rs  validate.rs
src/discord/: api.rs  dispatch.rs  gateway.rs  mod.rs  types.rs
src/email/: audit.rs  dispatch.rs  imap_poll.rs  mod.rs  oauth.rs  parser.rs  quarantine.rs  rate.rs  runtime.rs  security.rs  smtp.rs  store.rs  system.rs  webhook.rs
src/events/: mod.rs  subscriber.rs
src/gateway/: builder.rs  channel_manager.rs  config.rs  mod.rs
src/health/: actions.rs  analytics.rs  boot.rs  collector.rs  db_paths.rs  degradation.rs  detectors.rs  mod.rs  process.rs  store.rs  trend_context.rs  webhooks.rs
src/history/: indexer.rs  mod.rs  models.rs  storage.rs
src/image/: mod.rs
src/install/: backup.rs  backup_crypto.rs  backup_scheduler.rs  binary_upgrade.rs  chatterbox.rs  data_version.rs  deps.rs  linux.rs  macos.rs  mod.rs  plist.rs  rollback.rs  unit.rs  upgrade.rs  windows.rs
src/matrix/: api.rs  dispatch.rs  mod.rs  sync_loop.rs  types.rs
src/mcp/: adapter.rs  browser.rs  catalog.rs  client.rs  handler.rs  legacy_migrate.rs  mod.rs  registry.rs  store.rs
src/memory/: auto_extract.rs  categorizer.rs  fastembed_provider.rs  graph.rs  mod.rs  rollup.rs  semantic.rs  storage.rs  vector_backend.rs
src/notifications/: fcm.rs  mod.rs  web_push.rs
src/onboarding/: extractor.rs  mod.rs  preamble.rs  profile_file.rs  prompt.rs  schema.rs
src/policy/: admin.rs  engine.rs  event.rs  llm.rs  mod.rs  rules.rs
src/privhelper/: client.rs  daemon.rs  mod.rs  net.rs  protocol.rs  unit.rs  wsl.rs
src/providers/: catalog.rs  errors.rs  failover.rs  mod.rs  overlays.rs  usage.rs
src/proxy/: mod.rs  process.rs  template.rs
src/remote_access/: mod.rs  tailscale.rs
src/sandbox/: error.rs  language.rs  limits.rs  linux.rs  mod.rs  output.rs  pyodide.rs  pyodide_runner.mjs  rootfs.rs  stub.rs  wasm.rs
src/security/: auth.rs  cors.rs  hmac.rs  ip_bans.rs  log.rs  mod.rs  rate_limit.rs
src/server/: mod.rs  router.rs  web_apps.rs
src/session/: mod.rs
src/setup/: mod.rs
src/skills/: bundled.rs  cli.rs  loader.rs  manifest.rs  mod.rs  permissions.rs  prefs.rs  runtime.rs  secrets.rs  signing.rs  trust.rs
src/slack/: api.rs  dispatch.rs  handler.rs  mod.rs  types.rs
src/stt/: encoder.rs  manifest.rs  mod.rs  service.rs  types.rs
src/summarizer/: mod.rs
src/task_artifacts/: mod.rs
src/tools/: agent_tasks.rs  approvals.rs  audit.rs  automations.rs  backup.rs  calendar.rs  code_run.rs  companion.rs  datetime.rs  filesystem.rs  mod.rs  (+21 more)
tests/: api_smoke.rs  automations_rate_limit.rs  automations_slice1.rs  automations_slice2.rs  automations_slice3.rs  automations_slice5.rs  automations_slice6.rs  automations_slice7.rs  automations_slice8.rs  code_run_allowlist.rs  code_run_e2e.rs  fresh_install_smoke.rs
verification/: release-pubkey.minisign
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+329 files in other folders)
